--- a/public/style/css/home.css
+++ b/public/style/css/home.css
@@ -846,8 +846,8 @@ h1, h2, h3, h4, h5, h6 {
     left: 0;
     z-index: 15;
     background: #FFF;
-    width: 100%;
-    height: 100%
+    width: 100vw;
+    height: 100vh
 }
 
 .homepage_demo_content {
